# sol-dataset-kaggle-updater

./: .gitignore  README.md  fetch_full_sol_data.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
solana_dataset_kaggle_auto_updater/: kaggle_update_solana.py
